--- a/ResponsiveFileManagerMVC/packages.config
+++ b/ResponsiveFileManagerMVC/packages.config
@@ -27,6 +27,7 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
+  <package id="ResponsiveFileManagerMVC.Phalanger" version="1.0.0" targetFramework="net451" />
   <package id="TinyMCE.jQuery" version="4.7.13" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
